implemented create blog and docker
