# internal/blog/handler/blog_handler.go
@@ -2,6 +2,9 @@ package handler
 
 import (
 	"context"
+	"errors"
+	"fmt"
+	"github.com/Georgy27/blogger_api/internal/blog/converter"
 	blogService "github.com/Georgy27/blogger_api/internal/blog/service"
 	bloggerV1 "github.com/Georgy27/blogger_api/pkg/blogger_v1"
 	"google.golang.org/protobuf/types/known/emptypb"
@@ -19,10 +22,30 @@ func NewBlogHandler(blogService blogService.BlogService) *BlogHandler {
 }
 
 func (h *BlogHandler) CreateBlog(ctx context.Context, req *bloggerV1.CreateBlogRequest) (*bloggerV1.CreateBlogResponse, error) {
-	return nil, nil
+	blogInfo := &bloggerV1.BlogInfo{
+		Name:        req.GetName(),
+		Description: req.GetDescription(),
+		WebsiteUrl:  req.GetWebsiteUrl(),
+	}
+
+	blog, err := h.blogService.CreateBlog(ctx, converter.ToBlogInfoFromProto(blogInfo))
+
+	if err != nil {
+		return nil, fmt.Errorf("failed to create blog: %v", err)
+	}
+
+	if blog == nil {
+		return nil, errors.New("blog should not be nil")
+
+	}
+
+	return &bloggerV1.CreateBlogResponse{
+		Blog: converter.ToBlogProtoFromService(blog),
+	}, nil
 }
 
 func (h *BlogHandler) GetBlog(ctx context.Context, req *bloggerV1.GetBlogRequest) (*bloggerV1.GetBlogResponse, error) {
+
 	return nil, nil
 }
 
